# StockWatch

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/StockWatch/: __init__.py  app.py  stock_service.py
tests/: pytest.ini  test_app.py
